// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add ESLint 1`] = `
Object {
  "/.eslintignore": "node_modules/",
  "/.eslintrc": "{
  \\"extends\\": \\"eslint:recommended\\"
}",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"test\\": \\"jest\\",
    \\"lint\\": \\"eslint . --cache --fix\\",
    \\"pretest\\": \\"npm run lint\\"
  }
}",
}
`;

exports[`should add custom rules 1`] = `
"{
  \\"extends\\": \\"eslint:recommended\\",
  \\"rules\\": {
    \\"no-undef\\": 0
  }
}"
`;

exports[`should add extra rules, parser and extensions for a TypeScript project 1`] = `
Object {
  "/.eslintignore": "node_modules/",
  "/.eslintrc": "{
  \\"extends\\": \\"eslint:recommended\\",
  \\"parser\\": \\"typescript-eslint-parser\\",
  \\"rules\\": {
    \\"no-undef\\": 0,
    \\"no-unused-vars\\": 0,
    \\"no-useless-constructor\\": 0
  }
}",
  "/package.json": "{
  \\"name\\": \\"unicorn\\",
  \\"devDependencies\\": {
    \\"typescript\\": \\"*\\"
  },
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix --ext .ts,.tsx\\",
    \\"pretest\\": \\"npm run lint\\"
  }
}",
}
`;

exports[`should keep custom extensions defined in a package.json script 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix --ext .ts\\",
    \\"test\\": \\"jest\\",
    \\"pretest\\": \\"npm run lint\\"
  }
}"
`;

exports[`should remove custom extension if it’s "js" (default value) 1`] = `
"{
  \\"name\\": \\"unicorn\\",
  \\"scripts\\": {
    \\"lint\\": \\"eslint . --cache --fix\\",
    \\"test\\": \\"jest\\",
    \\"pretest\\": \\"npm run lint\\"
  }
}"
`;

exports[`should use a custom preset 1`] = `
"{
  \\"extends\\": \\"airbnb\\"
}"
`;
